--- a/project2/public/index.html
+++ b/project2/public/index.html
@@ -3,9 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Vue App</title>
+  <title>Movie</title>
 </head>
-<body style="background-color: #333131; color: #e70000;">
+<body style="background-color: #333131; color: 
+#ffffff;">
   <div id="app"></div>
 </body>
 </html>
