--- a/index.html
+++ b/index.html
@@ -1,2 +1,19 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Movie</title><script defer="defer" src="/Project2/js/chunk-vendors.e684531d.js"></script><script defer="defer" src="/Project2/js/app.b7876417.js"></script><link href="/Project2/css/chunk-vendors.bd00fbca.css" rel="stylesheet"><link href="/Project2/css/app.593763f6.css" rel="stylesheet"></head><body style="background-color: #333; color: 
-#ffffff;"><div id="app"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- 카카오 로그인 -->
+    <!-- (1) 카카오 JS SDK -->
+    <script
+      src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.4/kakao.min.js"
+      integrity="sha384-DKYJZ8NLiK8MN4/C5P2dtSmLQ4KwPaoqAfyA/DfmEc1VDxu4yyC7wy6K1Hs90nka"
+      crossorigin="anonymous"
+    ></script>
+<title>Movie</title>
+<script defer src="/Project2/js/chunk-vendors.js"></script><script defer src="/Project2/js/app.js"></script></head>
+<body style="background-color: #333; color: 
+#ffffff;">
+  <div id="app"></div>
+</body>
+</html>
